--- a/Session2/Implementation/app/src/main/res/values/strings.xml
+++ b/Session2/Implementation/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Login App</string>
     <string name="login">Login</string>
     <string name="choose">choose</string>
+    <string name="hello">Hello</string>
 </resources>
