Implement login functionality

--- a/Session2/Implementation/app/src/main/res/values/strings.xml
+++ b/Session2/Implementation/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="login">Login</string>
     <string name="choose">choose</string>
     <string name="hello">Hello</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
 </resources>
