Create UI for storage example

--- a/Session3/Implementation/app/src/main/res/values/strings.xml
+++ b/Session3/Implementation/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Store App</string>
+    <string name="storeInSharedPreference">Stored in SharedPreferences</string>
+    <string name="storeInFile">Stored in a File</string>
 </resources>
